--- a/css/style.css
+++ b/css/style.css
@@ -19,16 +19,18 @@ a {
     max-width: 1520px;
     height: 100%;
     margin: 0 auto;
+    padding-top: 100px;
+    /* position: relative; */
 }
 
 /* header */
 header {
-    width: 100%;
+    width: 1520px;
     height: 100px;
     background-color: white;
     border-bottom: 2px solid #ccc;
-    position: relative;
-    left: 0;
+    position: fixed;
+    left: calc(50%-1520px/2);
     top: 0;
 }
 
@@ -57,6 +59,12 @@ header nav > .depth1 {
     /* align-items: center; */
 }
 
+header nav .depth1 > li{
+    /* outline: 1px solid red; */
+    width: 33%;
+    text-align: center;
+}
+
 header nav .depth1 > li a {
     font-size: 16px;
     font-weight: 400;
@@ -73,14 +81,14 @@ header nav .depth2 {
     /* outline: 1px solid red; */
     width: 160px;
     position: absolute;
-    right: 0;
+    left: -30px;
     max-height: 0;
     justify-self: flex-end;
     display: flex;
     justify-content: space-around;
     align-items: center;
     overflow: hidden;
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 header nav .depth2 li:hover a {
@@ -89,7 +97,6 @@ header nav .depth2 li:hover a {
 
 header nav .nav_works:hover {
     height: 130px;
-    /* background-color: red; */
 }
 
 header nav .nav_works:hover .depth2 {
