--- a/css/works.css
+++ b/css/works.css
@@ -4,7 +4,9 @@
     width: 100%;
     padding: 100px;
 }
-.works_main h1 {
+
+/* individual part */
+.works_main #individual {
     font-size: 40px;
     font-weight: 400;
     margin-bottom: 50px;
@@ -13,8 +15,7 @@
     width: 1340px;
     display: flex;
     padding: 60px;
-    margin-bottom: 84px;
-    
+    margin-bottom: 84px;  
 }
 .works_main .individual_item img {
     width: 610px;
@@ -70,6 +71,82 @@
     
 }
 .works_main .individual_item .works_item_details .works_btn a:hover {
+    border: none;
+    background-color: black;
+    color: white;
+}
+
+.works_main #team {
+    font-size: 40px;
+    font-weight: 400;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+
+/* team_item */
+.works_main .team_item {
+    width: 1340px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    /* padding-left: 60px; */
+    margin-bottom: 84px; 
+    /* outline: 1px solid red; */
+}
+.works_main .team_item img {
+    width: 1300px;
+    height: 700px;
+}
+.works_main .team_item h2 {
+    width: 100%;
+    font-size: 26px;
+    font-weight: 400;
+    margin-bottom: 22px;
+    margin-left: 30px;
+}
+.works_main .team_item .works_item_details {
+    width: 45%;
+    padding-right: 5%;
+    display: flex;
+    flex-direction: column;
+    /* margin-left: 10px; */
+}
+.works_main .team_item .works_item_details h3 {
+    font-size: 18px;
+    font-weight: 400;
+    margin-left: 20px;
+    margin-bottom: 15px;
+}
+.works_main .team_item .works_item_details ul {
+    list-style-type: disc;
+    margin-left: 15px;
+    padding-left: 40px;
+    margin-bottom: 20px;
+}
+.works_main .team_item .works_item_details li {
+    margin-bottom: 10px;   
+}
+.works_main .team_item .works_btn {
+    width: 40%;
+    margin-top: 20px;
+    /* text-align: center; */
+    display: flex;
+    justify-content: space-around;
+    /* outline: 1px solid red; */
+    padding-left: 50px;
+    padding-right: 50px;
+}
+.works_main .team_item .works_btn a {
+    /* display: inline-block; */
+    width: 150px;
+    height: 40px;
+    border: 2px solid #ccc;
+    font-size: 18px;
+    line-height: 36px;
+    text-align: center;
+    
+}
+.works_main .team_item .works_btn a:hover {
     border: none;
     background-color: black;
     color: white;
