--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ a {
 
 /* header */
 header {
-    width: 1520px;
+    max-width: 1520px;
     height: 100px;
     background-color: white;
     border-bottom: 2px solid #ccc;
@@ -42,7 +42,7 @@ header h1 {
 
 header nav {
     position: absolute;
-    width: 325px;
+    max-width: 325px;
     height: 20px;
     right: 6%;
     top: 45%;
