--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ a {
 }
 
 .container {
-    width: 100%;
+    max-width: 1520px;
     height: 100%;
     margin: 0 auto;
     padding-top: 100px;
@@ -30,7 +30,7 @@ header {
     background-color: white;
     border-bottom: 2px solid #ccc;
     position: fixed;
-    left: calc(50%-1520px/2);
+    left: 0;
     top: 0;
     /* outline: 1px solid red; */
 }
