--- a/css/works.css
+++ b/css/works.css
@@ -18,8 +18,8 @@
         margin-bottom: 84px;  
     }
     .works_main .individual_item img {
-        width: 610px;
-        height: 410px;
+        width: 400px;
+/*         height: 410px; */
         margin-right: 30px;
         
     }
