--- a/css/works.css
+++ b/css/works.css
@@ -19,7 +19,7 @@
     }
     .works_main .individual_item img {
         width: 400px;
-/*         height: 410px; */
+        height: 410px;
         margin-right: 30px;
         
     }
