--- a/css/works.css
+++ b/css/works.css
@@ -18,7 +18,7 @@
         margin-bottom: 84px;  
     }
     .works_main .individual_item img {
-/*         width: 400px; */
+        width: 200px;
         height: 410px;
         margin-right: 30px;
         
