--- a/css/works.css
+++ b/css/works.css
@@ -212,6 +212,7 @@
     left: 0;
     top: 0;
     z-index: 2;
+    display:none;
   }
   .works_main .portfolio_list .right_handle {
     width: 40px;
@@ -221,6 +222,7 @@
     right: 0;
     top: 0;
     z-index: 2;
+    display:none;
   }
   .works_main .portfolio_list .left_handle img {
     width: 50%;
