--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -30,8 +30,7 @@ header {
     height: 100px;
     background-color: white;
     border-bottom: 2px solid #ccc;
-    position: fixed;
-    top: 0;
+    position: relative;
 }
 
 header h1 {
