--- a/css/home.css
+++ b/css/home.css
@@ -36,6 +36,7 @@
         height: 30px;
         display: flex;
         justify-content: space-between;
+        outline: 1px solid red;
     }
     .home_main .home_main_contents .btn a {
         font-size: 25px;
