--- a/css/works.css
+++ b/css/works.css
@@ -47,34 +47,36 @@
     max-height: 100%;
   }
   .works_main .portfolio_list .left_handle {
-    width: 100px;
-    height: 100%;
+    width: 50px;
+    height: 30%;
     background-color: rgba(0, 0, 0, 0.2);
     position: absolute;
     left: 0;
     top: 0;
     z-index: 2;
+    border-radius: 100%;
     cursor: pointer;
   }
   .works_main .portfolio_list .right_handle {
-    width: 100px;
-    height: 100%;
+    width: 50px;
+    height: 30%;
     background-color: rgba(0, 0, 0, 0.2);
     position: absolute;
-    right: 0;
+    left: 0;
     top: 0;
     z-index: 2;
+    border-radius: 100%;
     cursor: pointer;
   }
   .works_main .portfolio_list .left_handle img {
-    width: 50%;
-    height: 80%;
+    width: 40%;
+    height: 60%;
     margin-top: 25%;
     margin-left: 20%;
   }
   .works_main .portfolio_list .right_handle img {
-    width: 50%;
-    height: 80%;
+    width: 40%;
+    height: 60%;
     margin-top: 25%;
     margin-left: 30%;
   }
