--- a/css/works.css
+++ b/css/works.css
@@ -62,7 +62,7 @@
     height: 30%;
     background-color: rgba(0, 0, 0, 0.2);
     position: absolute;
-    left: 0;
+    right: 0;
     top: 0;
     z-index: 2;
     border-radius: 100%;
