--- a/css/works.css
+++ b/css/works.css
@@ -52,7 +52,7 @@
     background-color: rgba(0, 0, 0, 0.2);
     position: absolute;
     left: 0;
-    top: 0;
+    top: 40%;
     z-index: 2;
     border-radius: 100%;
     cursor: pointer;
@@ -63,7 +63,7 @@
     background-color: rgba(0, 0, 0, 0.2);
     position: absolute;
     right: 0;
-    top: 0;
+    top: 40%;
     z-index: 2;
     border-radius: 100%;
     cursor: pointer;
